base structure update

--- a/html-feladatok-bemutatkozo/index.html
+++ b/html-feladatok-bemutatkozo/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="ROBOTS" content="index, follow">
+    <meta name="description" content="Kocsis Gábor bemutatkozó oldala. Webfejlesztés, fotógráfia, csillagászat">
+    <meta name="keywords" content="webfejlesztés, fotógráfia, csillagászat">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Bemutatkozó oldal</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <ul id="title">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="works.html">Works</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+        <h1>Kocsis Gábor bemutatkozó oldala</h1>
+        
+    </header>
+    <main>
+        <section>
+            <p>Kocsis Gábor vagyok, webfejlesztő, amatőr fotós és hobbicsillagász. </p>
+        </section>
+    </main>
+    <footer>
+        <button><a href="#title">BUTTON</a></button>
+    </footer>
 </body>
+
 </html>
