menu complete, add some images

--- a/html-feladatok-bemutatkozo/index.html
+++ b/html-feladatok-bemutatkozo/index.html
@@ -23,15 +23,50 @@
             </ul>
         </nav>
         <h1>Kocsis Gábor bemutatkozó oldala</h1>
-        
+
     </header>
     <main>
         <section>
             <p>Kocsis Gábor vagyok, webfejlesztő, amatőr fotós és hobbicsillagász. </p>
+            <img src="./images/photo1.jpg" alt="profile pictures">
+            <img src="./images/photo2.jpg" alt="">
+        </section>
+        <section>
+            <div class="box">
+                <h3>Megbízhatóság</h3>
+                <p>Határidők pontos betartása. </p>
+            </div>
+            <div class="box">
+                <h3>Precizitás</h3>
+                <p>"Clean code" alkalmazása.</p>
+            </div>
+            <div class="box">
+                <h3>Versenyképesség</h3>
+                <p>A legújabb webes technológiák használata.</p>
+            </div>
         </section>
     </main>
     <footer>
-        <button><a href="#title">BUTTON</a></button>
+        <div>
+            <div class="social">
+                <ul>
+                    <li>Facebook</li>
+                    <li>Instagramm</li>
+                    <li>twitter</li>
+                    <li>Linkedin</li>
+                </ul>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="works.html">Works</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </div>
+            <div class="button"></div>
+        </div>
+        <div class="copyright">© 2021 Kocsis Gábor Minden job fenntartva!</div>
     </footer>
 </body>
 
