--- a/html-feladatok-bemutatkozo/works.html
+++ b/html-feladatok-bemutatkozo/works.html
@@ -14,12 +14,40 @@
 
 <body>
     <header>
-        <nav></nav>
+        <nav>
+            <ul id="title">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="works.html">Works</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section></section>
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <div class="social">
+                <ul>
+                    <li>Facebook</li>
+                    <li>Instagramm</li>
+                    <li>twitter</li>
+                    <li>Linkedin</li>
+                </ul>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="works.html">Works</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </div>
+            <div class="button"></div>
+        </div>
+        <div class="copyright">© 2021 Kocsis Gábor Minden job fenntartva!</div>
+    </footer>
 </body>
 
 </html>
