--- a/html-feladatok-bemutatkozo/index.html
+++ b/html-feladatok-bemutatkozo/index.html
@@ -22,38 +22,51 @@
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
-        <h1>Kocsis Gábor bemutatkozó oldala</h1>
-
+        <h1>Üdvözlöm bemutatkozó oldalamon</h1>
     </header>
     <main>
-        <section>
-            <p>Kocsis Gábor vagyok, webfejlesztő, amatőr fotós és hobbicsillagász. </p>
-            <img src="./images/photo1.jpg" alt="profile pictures">
-            <img src="./images/photo2.jpg" alt="">
+        <section class="debut">
+            <p>Kocsis Gábor vagyok, desiner, webfejlesztő, amatőr fotós és hobbicsillagász. </p>
+            <div class="pictures">
+                <img src="./images/photo1.jpg" alt="profile pictures">
+                <img src="./images/photo2.jpg" alt="profile pictures">
+            </div>
+
         </section>
-        <section>
-            <div class="box">
-                <h3>Megbízhatóság</h3>
-                <p>Határidők pontos betartása. </p>
-            </div>
-            <div class="box">
-                <h3>Precizitás</h3>
-                <p>"Clean code" alkalmazása.</p>
-            </div>
-            <div class="box">
-                <h3>Versenyképesség</h3>
-                <p>A legújabb webes technológiák használata.</p>
+        <section class="content">
+            <h2>Soft skillek</h2>
+            <div class="skill_boxes">
+                <div class="box">
+                    <h3>Megbízhatóság</h3>
+                    <p>Határidők pontos betartása. Rugalmasság </p>
+                </div>
+                <div class="box">
+                    <h3>Precizitás</h3>
+                    <p>"Clean code" alkalmazása. Modern fejlesztőkörnyezet</p>
+                </div>
+                <div class="box">
+                    <h3>Versenyképesség</h3>
+                    <p>A legújabb webes technológiák használata.</p>
+                </div>
             </div>
         </section>
     </main>
     <footer>
-        <div>
+        <div class="footer">
             <div class="social">
                 <ul>
-                    <li>Facebook</li>
-                    <li>Instagramm</li>
-                    <li>twitter</li>
-                    <li>Linkedin</li>
+                    <li><a href="#">
+                            <ion-icon name="logo-instagram"></ion-icon>
+                        </a></li>
+                    <li><a href="#">
+                            <ion-icon name="logo-facebook"></ion-icon>
+                        </a></li>
+                    <li><a href="#">
+                            <ion-icon name="logo-twitter"></ion-icon>
+                        </a></li>
+                    <li><a href="#">
+                            <ion-icon name="logo-linkedin"></ion-icon>
+                        </a></li>
                 </ul>
             </div>
             <div class="links">
@@ -64,10 +77,12 @@
                     <li><a href="about.html">About</a></li>
                 </ul>
             </div>
-            <div class="button"></div>
+            <div class="button"><a href="#title">A lap tetejére</a></div>
         </div>
         <div class="copyright">© 2021 Kocsis Gábor Minden job fenntartva!</div>
     </footer>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
