--- a/html-feladatok-bemutatkozo/works.html
+++ b/html-feladatok-bemutatkozo/works.html
@@ -22,18 +22,27 @@
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
+        <h1>Eddigi Munkáim</h1>
     </header>
     <main>
         <section></section>
     </main>
     <footer>
-        <div>
+        <div class="footer">
             <div class="social">
                 <ul>
-                    <li>Facebook</li>
-                    <li>Instagramm</li>
-                    <li>twitter</li>
-                    <li>Linkedin</li>
+                    <li><a href="#">
+                            <ion-icon name="logo-instagram"></ion-icon>
+                        </a></li>
+                    <li><a href="#">
+                            <ion-icon name="logo-facebook"></ion-icon>
+                        </a></li>
+                    <li><a href="#">
+                            <ion-icon name="logo-twitter"></ion-icon>
+                        </a></li>
+                    <li><a href="#">
+                            <ion-icon name="logo-linkedin"></ion-icon>
+                        </a></li>
                 </ul>
             </div>
             <div class="links">
@@ -44,10 +53,12 @@
                     <li><a href="about.html">About</a></li>
                 </ul>
             </div>
-            <div class="button"></div>
+            <div class="button"><a href="#title">A lap tetejére</a></div>
         </div>
         <div class="copyright">© 2021 Kocsis Gábor Minden job fenntartva!</div>
     </footer>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
