--- a/html-feladatok-bemutatkozo/index.html
+++ b/html-feladatok-bemutatkozo/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="button"><a href="#title">A lap tetejére</a></div>
         </div>
-        <div class="copyright">© 2021 Kocsis Gábor Minden job fenntartva!</div>
+        <div class="copyright">© 2021 Kocsis Gábor Minden jog fenntartva!</div>
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
