add pic, gallery ready

--- a/html-feladatok-bemutatkozo/gallery.html
+++ b/html-feladatok-bemutatkozo/gallery.html
@@ -25,7 +25,29 @@
         <h1>Galéria</h1>
     </header>
     <main>
-        <section></section>
+        <section>
+            <img src="./images/burger.jpg" alt="">
+            <img src="./images/DSC_1799.JPG" alt="">
+            <img src="./images/DSC_1777.JPG" alt="">
+            <img src="./images/DSC_1794.JPG" alt="">
+            <img src="./images/DSC_1796.JPG" alt="">
+            <img src="./images/DSC_1800.JPG" alt="">
+            <img src="./images/DSC_1818.JPG" alt="">
+            <img src="./images/DSC_1818.JPG" alt="">
+            <img src="./images/DSC_1947.JPG" alt="">
+            <img src="./images/DSC_1967.JPG" alt="">
+            <img src="./images/DSC_1984.JPG" alt="">
+            <img src="./images/elefant.jpg" alt="">
+            <img src="./images/DSC_2766.JPG" alt="">
+            <img src="./images/20190629_093939.jpg" alt="">
+            <img src="./images/20190629_094150.jpg" alt="">
+            <img src="./images/20190629_094314.jpg" alt="">
+            <img src="./images/20190630_121334.jpg" alt="">
+            <img src="./images/20190629_202750.jpg" alt="">
+            <img src="./images/20190629_195432.jpg" alt="">
+            <img src="./images/20190701_184202.jpg" alt="">
+            <img src="./images/P1110648.JPG" alt="">
+        </section>
     </main>
     <footer>
         <div class="footer">
