--- a/css-feladatok-admin/index.html
+++ b/css-feladatok-admin/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <header class="header--dark">
-        <h3 class="header__title">Admin Page</h3>
+        <h3 class="header__title">Admin Page <i class="fa fa-bars" aria-hidden="true"></i></h3>
         <div class="header__search">
             <input class="search__input" type="text" placeholder="Search for...">
-            <button class="search__btn"><i class="fa fa-search" aria-hidden="true"></i></button>
+            <button type="submit" class="search__btn"><i class="fa fa-search" aria-hidden="true"></i></button>
             <i class="fa fa-user" aria-hidden="true"></i>
             <i class="fa fa-sort-desc" aria-hidden="true"></i>
         </div>
