--- a/bs-feladatok-cards/index.html
+++ b/bs-feladatok-cards/index.html
@@ -7,17 +7,72 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    <title>Főoldal</title>
+    <title>Pricing</title>
 </head>
 
 <body>
     <main>
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <h1 class="text-center mb-5">Pricing</h1>
+                <div class="py-5">
+                    <h1 class="font-weight-light text-center mb-3">Pricing</h1>
+                    <p class="text-center"> Quickly build an effective pricing table for your potential customers with
+                        this Bootstrap example. It's built with Bootstrap components and utilities with little
+                        customization.</p>
+                </div>
+                <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card">
+                        <div class="card-header text-center h4">
+                          Free
+                        </div>
+                        <div class="card-body">
+                          <h5 class="card-title text-center">$0 <span class="text-muted small">/ mo</span></h5>
+                          <ul class="text-center p-0">
+                              <li class="list-unstyled">10 users included</li>
+                              <li class="list-unstyled">2 GB of storage</li>
+                              <li class="list-unstyled">Email support</li>
+                              <li class="list-unstyled">Help center access</li>
+                          </ul>
+                          <a href="#" class="btn btn-outline-primary w-100">Sign up for free</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card">
+                        <div class="card-header text-center h4">
+                          Pro
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title text-center">$15 <span class="text-muted small">/ mo</span></h5>
+                            <ul class="text-center p-0">
+                                <li class="list-unstyled">20 users included</li>
+                                <li class="list-unstyled">10 GB of storage</li>
+                                <li class="list-unstyled">Priority Email support</li>
+                                <li class="list-unstyled">Help center access</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary w-100">Get started</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header text-center h4">
+                          Enterprise
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title text-center">$29 <span class="text-muted small">/ mo</span></h5>
+                            <ul class="text-center p-0">
+                                <li class="list-unstyled">30 users included</li>
+                                <li class="list-unstyled">15 GB of storage</li>
+                                <li class="list-unstyled">Phone and email support</li>
+                                <li class="list-unstyled">Help center access</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary w-100">Contact us</a>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
